--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ xscreensaver (5.39-1) UNRELEASED; urgency=medium
     Missing distclean in new, non-generated Makefile
   * Drop recommends on libgnomeui (Closes: #885731)
   * Change recommends from perl5 to perl (Closes: #864310)
+  * Bump Standards-Version to 4.1.4 (no changes needed)
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200
 
