Update Vcs-* fields to new location at salsa.debian.org

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ xscreensaver (5.39-1) UNRELEASED; urgency=medium
   * Drop recommends on libgnomeui (Closes: #885731)
   * Change recommends from perl5 to perl (Closes: #864310)
   * Bump Standards-Version to 4.1.4 (no changes needed)
+  * Update various URLs to use https instead of http
+  * Update Vcs-* fields to new location at salsa.debian.org
 
  -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200
 
