--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
-xscreensaver (5.39-1) UNRELEASED; urgency=medium
+xscreensaver (5.40-1.1) UNRELEASED; urgency=medium
 
+  [ Antoine Beaupré ]
+  * Non-maintainer upload
+  * New upstream version 5.40 (Closes: #907674)
+    - New hacks, `filmleader', `vfeedback' and `glitchpe'
+    - GLPlanet blends between day and night maps at the dusk terminator.
+    - DymaxionMap can display arbitrary map images, and animate sunlight
+      across the flattened globe.
+    - Tessellimage can draw either Delaunay or Voronoi tilings.
+    - XAnalogTV includes test cards. 
+  [ Tormod Volden ]
   * New upstream release 5.39, changes since 5.36:
     - New hacks, `vigilance', 'esper', 'razzledazzle', 'peepers',
       'crumbler' and `maze3d'.
@@ -35,7 +45,7 @@ xscreensaver (5.39-1) UNRELEASED; urgency=medium
   * Update Vcs-* fields to new location at salsa.debian.org
   * Switch to dpkg-source 3.0 (quilt) format
 
- -- Tormod Volden <debian.tormod@gmail.com>  Sun, 23 Jul 2017 19:15:54 +0200
+ -- Antoine Beaupré <anarcat@debian.org>  Tue, 04 Sep 2018 18:00:47 -0400
 
 xscreensaver (5.36-1) unstable; urgency=medium
 
