prepare upload to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.40-1.1) UNRELEASED; urgency=medium
+xscreensaver (5.40-1.1) unstable; urgency=medium
 
   [ Antoine Beaupré ]
   * Non-maintainer upload
