--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,6 @@
-xscreensaver (5.40-1.1) unstable; urgency=medium
+xscreensaver (5.40-1) unstable; urgency=medium
 
   [ Antoine Beaupré ]
-  * Non-maintainer upload
   * New upstream version 5.40 (Closes: #907674)
     - New hacks, `filmleader', `vfeedback' and `glitchpe'
     - GLPlanet blends between day and night maps at the dusk terminator.
@@ -9,7 +8,7 @@ xscreensaver (5.40-1.1) unstable; urgency=medium
       across the flattened globe.
     - Tessellimage can draw either Delaunay or Voronoi tilings.
     - XAnalogTV includes test cards.
-  * removed patches that do not apply and were fixing a bug that seems
+  * Removed patches that do not apply and were fixing a bug that seems
     fixed upstream (#304344):
     - 30_hacks_xanalogtv.patch and
     - 31_utils_images_logo-50-bad-xpm.patch
@@ -50,7 +49,7 @@ xscreensaver (5.40-1.1) unstable; urgency=medium
   * Update Vcs-* fields to new location at salsa.debian.org
   * Switch to dpkg-source 3.0 (quilt) format
 
- -- Antoine Beaupré <anarcat@debian.org>  Tue, 04 Sep 2018 18:00:47 -0400
+ -- Tormod Volden <debian.tormod@gmail.com>  Thu, 27 Sep 2018 00:12:07 +0200
 
 xscreensaver (5.36-1) unstable; urgency=medium
 
