--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.42-1) unstable; urgency=medium
+xscreensaver (5.42+dfsg1-1) UNRELEASED; urgency=medium
 
   * New upstream release 5.42, changes since 5.40:
     - New hack, `handsy'.
@@ -8,6 +8,8 @@ xscreensaver (5.42-1) unstable; urgency=medium
     - BSOD Solaris improved. DVD added.
     - If the xscreensaver daemon is setuid, then we can implore the
       kernel's out-of-memory killer to not unlock the screen.
+  * debian/copyright: Exclude OSX and Android build trees
+  * debian/watch: Mangle version name for dfsg repack
   * debian/patches/14_upstream_cpp_comments.patch: Avoid // comment
 
  -- Tormod Volden <debian.tormod@gmail.com>  Mon, 21 Jan 2019 21:59:56 +0100
