--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xscreensaver (5.42+dfsg1-1) UNRELEASED; urgency=medium
+xscreensaver (5.42+dfsg1-1) unstable; urgency=medium
 
   * New upstream release 5.42, changes since 5.40:
     - New hack, `handsy'.
@@ -12,7 +12,7 @@ xscreensaver (5.42+dfsg1-1) UNRELEASED; urgency=medium
   * debian/watch: Mangle version name for dfsg repack
   * debian/patches/14_upstream_cpp_comments.patch: Avoid // comment
 
- -- Tormod Volden <debian.tormod@gmail.com>  Mon, 21 Jan 2019 21:59:56 +0100
+ -- Tormod Volden <debian.tormod@gmail.com>  Fri, 25 Jan 2019 00:15:07 +0100
 
 xscreensaver (5.40-1) unstable; urgency=medium
 
