--- a/hacks/glx/deepstars.man
+++ b/hacks/glx/deepstars.man
@@ -1,21 +1,17 @@
-.TH XScreenSaver 1 "5-May-2004" "X Version 11"
+.TH XScreenSaver 1 "" "X Version 11"
 .SH NAME
-circuit - animates a number of 3D electronic components.
+deepstars - screen saver.
 .SH SYNOPSIS
-.B circuit
+.B deepstars
 [\-display \fIhost:display.screen\fP]
 [\-visual \fIvisual\fP]
 [\-window]
 [\-root]
 [\-delay \fInumber\fP]
-[\-parts \fInumber\fP]
-[\-no-spin]
-[\-rotate]
 [\-speed \fInumber\fP]
-[\-no-light]
-[\-fps]
+[\-smear \fInumber\fP]
 .SH DESCRIPTION
-Animates a number of 3D electronic components.
+A long exposure of the night sky, showing star paths as vapor trails.
 .SH OPTIONS
 .TP 8
 .B \-visual \fIvisual\fP
@@ -29,25 +25,14 @@ Draw on a newly-created window.  This is the default.
 Draw on the root window.
 .TP 8
 .B \-delay \fInumber\fP
-Per-frame delay, in microseconds.  Default: 20000 (0.02 seconds.).
-.TP 8
-.B \-parts \fInumber\fP
-Number of parts.  Default: 10.
-.TP 8
-.B \-spin | \-no-spin
-Whether the objects should spin.
-.TP 8
-.B \-rotate | \-no-rotate
-Whether the scene should spin.
+Per-frame delay, in microseconds.  Default: 30000 (0.03 seconds).
 .TP 8
 .B \-speed \fInumber\fP
-Rotation speed, 0 - 100.  Default: 1.
+Animation speed.  2.0 means twice as fast, 0.5 means half as fast.
 .TP 8
-.B \-light | \-no-light
-Whether to use lighting, or flat coloring.
-.TP 8
-.B \-fps
-Display the current frame rate, CPU load, and polygon count.
+.B \-smear \fInumber\fP
+How long the vapor trails should be.
+2.0 means twice as long, 0.5 means half as long.
 .SH ENVIRONMENT
 .PP
 .TP 8
@@ -61,7 +46,7 @@ stored in the RESOURCE_MANAGER property.
 .BR X (1),
 .BR xscreensaver (1)
 .SH COPYRIGHT
-Copyright \(co 2002 by Ben Buxton.  Permission to use, copy, modify, 
+Copyright \(co 2019 by Jamie Zawinski.  Permission to use, copy, modify, 
 distribute, and sell this software and its documentation for any purpose is 
 hereby granted without fee, provided that the above copyright notice appear 
 in all copies and that both that copyright notice and this permission notice
@@ -69,4 +54,4 @@ appear in supporting documentation.  No representations are made about the
 suitability of this software for any purpose.  It is provided "as is" without
 express or implied warranty.
 .SH AUTHOR
-Ben Buxton.
+Jamie Zawinski.
