Update patches for new upstream version
A few other patches were obsoleted, mostly by being integrated upstream

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,10 @@ xscreensaver (5.43+dfsg1-1) UNRELEASED; urgency=medium
     - X11: On systemd systems, closing your laptop lid might actually lock
       your screen now, maybe.
     - X11: 'sonar' can ping without being setuid by using setcap.
-  * debian/patches/14_upstream_cpp_comments.patch: Deleted (obsolete)
+  * Removed patches obsoleted by upstream:
+    - debian/patches/12_upstream_hurd-no-pthread_stack_min.patch
+    - debian/patches/14_upstream_cpp_comments.patch
+    - debian/patches/91_allow_cross_compilation.patch.patch
 
  -- Will Ross <paxswill@paxswill.com>  Wed, 10 Jul 2019 14:54:04 -0400
 
