--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ xscreensaver (5.43+dfsg1-1) UNRELEASED; urgency=medium
     - X11: On systemd systems, closing your laptop lid might actually lock
       your screen now, maybe.
     - X11: 'sonar' can ping without being setuid by using setcap.
+      (Closes: #96677)
   * Removed patches obsoleted by upstream:
     - debian/patches/12_upstream_hurd-no-pthread_stack_min.patch
     - debian/patches/14_upstream_cpp_comments.patch
